[tool.poetry]
name = "voyagerpy"
version = "0.1.0"
description = "Python library for Voyager, the geo-spatialist R library."
authors = [
	"Pall Melsted <pmelsted@hi.is>",
	"Sindri Emmanuel Antonsson <sea7@hi.is>", 
	"Petur Helgi Einarsson <phe@hi.is>", 
]
readme = "README.md"
homepage = "https://pmelsted.github.io/voyagerpy"
repository = "https://github.com/pmelsted/voyagerpy"
keywords = ["Single-Cell", "Spatial", "voyager"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.8"
anndata = ">=0.6.22"
geopandas = ">=0.12"
matplotlib = ">=3.6,<3.7"
numpy = ">=1.23"
scipy = ">=1.9"
seaborn = ">=0.12"
shapely = ">=1.8.5"
opencv-python = ">=4.7"
networkx = ">=3.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pmelsted/voyagerpy/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
