[tool.poetry]
name = "voyagerpy"
version = "0.1.1"
description = "Python library for Voyager, the geo-spatialist R library."
authors = [
	"Pall Melsted <pmelsted@hi.is>",
	"Sindri Emmanuel Antonsson <sea7@hi.is>", 
	"Petur Helgi Einarsson <phe@hi.is>", 
]
readme = "README.md"
homepage = "https://pmelsted.github.io/voyagerpy"
repository = "https://github.com/pmelsted/voyagerpy"
keywords = ["Single-Cell", "Spatial", "voyager"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.8,<4"

anndata = ">=0.8"
esda = "^2.4.3"
fiona = "^1.9"
geopandas = "^0.13"
h5py = "^3.0"
libpysal = "^4.7.0"
matplotlib = "~3.6"
networkx = ">=3.0"
numpy = ">=1.22,<1.24"
opencv-python = "^4.7.0.72"
pandas = "^1.3"
scikit-learn = ">=1.2"
scipy = {version=">=1.10", python=">=3.8,<3.12"}
shapely = ">=1.7"
statsmodels = ">=0.13"

igraph = {version=">=0.10.4", optional = true}
leidenalg = {version = "^0.9.1", optional = true}
scanpy = {version = "^1.9.3", optional = true}

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pmelsted/voyagerpy/issues"

[tool.poetry.extras]
notebooks = ["scanpy", "leidenalg", "igraph"]

[tool.black]
line-length = 140

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
